# 2026_behavioral_finance_hw

./: .gitignore  README.md  pyproject.toml
hw1/code/: export_ipynb_code.py  extract_ipynb_figures.py  generate_report_tables.py  hw1.ipynb  hw1_appendix.py
hw1/docs/: hw1_report.tex
hw1/docs/hw1_report_assets/: manifest.json
hw1/docs/hw1_report_tables/: q1_decile_raw_returns.tex  q2_capm_ew.tex  q2_capm_rw.tex  q2_capm_vw.tex  q3_longshort_summary.tex  q4_horizon_ew_full.tex  q4_horizon_rw_full.tex  q4_horizon_small.tex  q4_horizon_vw_full.tex
hw3/code/: hw3.ipynb  hw3_appendix.py
